--- a/veris.app.conf
+++ b/veris.app.conf
@@ -7,3 +7,7 @@ mongo_port = <mongo port>
 mongo_user = <mongo username>
 mongo_pass = <mongo password>
 mongo_mech = <mongo auth mechanism>
+
+[log]
+log_path = verislog/
+log_file = verisapi.log
