--- a/veris.app.conf
+++ b/veris.app.conf
@@ -7,6 +7,8 @@ mongo_port = <mongo port>
 mongo_user = <mongo username>
 mongo_pass = <mongo password>
 mongo_mech = <mongo auth mechanism>
+veris_db = <database>
+veris_collection = <db.collection>
 
 [log]
 log_path = verislog/
