--- a/veris.app.conf
+++ b/veris.app.conf
@@ -8,7 +8,7 @@ mongo_user = <mongo username>
 mongo_pass = <mongo password>
 mongo_mech = <mongo auth mechanism>
 veris_db = <database>
-veris_collection = <db.collection>
+veris_collection = <collection>
 
 [log]
 log_path = verislog/
